# food_helper

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  manage.py  products_fixture.json  pyproject.toml  requirements.txt
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: fh_ci.yml
food_helper/: asgi.py  env.py  settings.py  urls.py  wsgi.py
fridges/: admin.py  forms.py  models.py  urls.py  views.py
fridges/migrations/: 0001_initial.py  0002_alter_fridge_name_alter_fridge_quantity_and_more.py  0003_alter_fridge_name_alter_fridge_quantity_and_more.py  0004_alter_fridge_user.py
fridges/tests/: test_forms.py  test_urls.py  test_views.py
ingredients/: factories.py  forms.py  models.py  urls.py  views.py
ingredients/api/: serializers.py  views.py
ingredients/migrations/: 0001_initial.py
ingredients/tests/: test_factories.py  test_forms.py  test_urls.py  test_views.py
products/: factorires.py  forms.py  models.py  urls.py  views.py
products/api/: serializers.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_factories.py  test_forms.py  test_urls.py  test_views.py
recepies/: apps.py  forms.py  models.py  urls.py  views.py
recepies/migrations/: 0002_recepie_preparation.py  0003_alter_recepie_preparation.py  0004_alter_recepie_preparation.py  0005_alter_recepie_tags.py  0006_rename_name_recepie_recepie_name.py  0007_alter_recepie_ingredients.py
recipe_ingredients/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
recipe_ingredients/api/: serializers.py  views.py
recipe_ingredients/migrations/: 0001_initial.py
recipe_ingredients/tests/: test_factories.py  test_forms.py  test_urls.py  test_views.py
recipes/: admin.py  apps.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
recipes/api/: serializers.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_user.py  0002_ingredient_remove_recipe_ingredients.py  0002_recepie_preparation.py  0003_alter_ingredient_quantity_type_recipeingredient_and_more.py  0003_alter_recepie_preparation.py  0004_alter_recepie_preparation.py  0004_remove_recipeingredient_amount_and_more.py  0005_alter_recepie_tags.py  0005_rename_user_fk_recipe_user.py  0006_rename_name_recepie_recepie_name.py  0007_alter_recepie_ingredients.py
recipes/tests/: test_factories.py  (+3 more)
user_ingredients/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
users/: apps.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
(+39 files in other folders)
